webroute3/configs/iptables
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:QUOTA - [0:0]
:l7filter - [0:0]
################# GENERATING NETFLOW FOR ALL TRAFFIC ##############################
-A FORWARD -j NETFLOW
-A INPUT -j NETFLOW
-A OUTPUT -j NETFLOW
################# FORWARDING TRAFFIC FOR L7 AND QUOTA FILTERS #####################
-A FORWARD -j QUOTA
-A FORWARD -j l7filter
################# ACCEPTING TRAFFIC FOWARDING FROM INTERNAL INTERFACES ############
-A FORWARD -i lo -j ACCEPT
-A FORWARD -i tun+ -j ACCEPT
-A FORWARD -i eth0 -j ACCEPT
-A FORWARD -i ppp+ -j ACCEPT
################# ACCEPTING ESTABLISHED AND RELATED CONNECTIONS ###################
-A FORWARD -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -m state --state RELATED -j ACCEPT
-A INPUT -m state --state ESTABLISHED -j ACCEPT
-A INPUT -m state --state RELATED -j ACCEPT
################ ACCEPTING INCOMING TRAFFIC ON INTERNAL INTERFACES ################
-A INPUT -i lo -j ACCEPT
-A INPUT -i ppp+ -j ACCEPT
-A INPUT -i tun+ -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
################# ACCEPTING SSH CONNECTIONS FROM EXTERNAL INTERFACE ###############
-A INPUT -i eth1 -p tcp -m tcp -m multiport -j ACCEPT --dports 22
################# END OF FILTER TABLE #############################################
COMMIT
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
################# FORWARDING ALL TRAFFIC TO L7-FILTER #############################
-A FORWARD -j NFQUEUE --queue-num 0
################# SETTING MARKS FOR TRAFFIC SHAPING AND POLICING ##################
-A FORWARD -d 192.168.100.0/24 -j MARK --set-mark 0x1
-A OUTPUT -d 192.168.100.0/24 -j MARK --set-mark 0x1
################# END OF MANGE TABLE ##############################################
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
################ FORWARDING ALL WEB TRAFFIC TO SQUID ##############################
-A PREROUTING -s 192.168.100.0/255.255.255.0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128
################ NAT FOR ALL PPP USERS ############################################
-A POSTROUTING -s 192.168.100.0/255.255.255.0 -o eth1 -j MASQUERADE
################ END OF NAT TABLE #################################################
COMMIT
